VOTE-2972 Fix spacing of the in page nav

--- a/web/themes/custom/votegov/src/sass/uswds-overrides/usa-in-page-nav.scss
+++ b/web/themes/custom/votegov/src/sass/uswds-overrides/usa-in-page-nav.scss
@@ -21,8 +21,6 @@
   @include grid-offset(1);
   @include u-margin-left(0);
   @include u-padding(0);
-  margin-inline-start: calc(100% / 12);
-  padding-inline-start: 2rem;
   max-width: inherit;
   position: unset;
 }
